Se trabajo la responsividad del encriptador y se agrego funcion pegar al boton correspondiente

--- a/index.html
+++ b/index.html
@@ -30,17 +30,16 @@
                 <div class="botones">
                     <button class="encriptar" onclick=" botonEncriptar()">Encriptar</button>
                     <button class="desencriptar" onclick=" botonDesencriptar()">Desencriptar</button>
-                    <button class="pegar">Pegar</button>
+                    <button class="pegar" onclick=" pegar()">Pegar</button>
                 </div>
                 </div>
             </section>
             <section class="cajaMensaje">
                 <div>
-                    <textarea class="mensaje" cols="40" rows="15" placeholder="¡Ningun mensaje fue encontrado! Ingrese el texto que desee encriptar o desencriptar..."></textarea>
+                    <textarea class="mensaje" cols="40" rows="15" placeholder="¡Aquí se muestra tu mensaje encriptado ...!"></textarea>
                 </div>    
-                <div class="btn-copiar">
+                <div class="botones">
                     <button class="copiar" onclick="copiar()">Copiar</button>
-                    <button class="pegar">Pegar</button>
                 </div>
 
             </section>
